# mycrc

./: Cargo.toml  README.md
src/: algorithm.rs  crc.rs  lib.rs
