[package]
name = "mycrc"
version = "0.3.1"
authors = ["Kazuki Kurota"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Create your own cyclic redundancy check (CRC)."
readme = "README.md"
repository = "https://github.com/kurotakazuki/mycrc"
categories = ["algorithms", "no-std"]
keywords = ["crc"]

[dependencies]
